--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^4.10.0",
     "react": "16.2.0",
     "react-native": "0.53.0",
+    "react-native-router-flux": "^4.0.0-beta.28",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.2.2",
